03_infrastructure/observability/ingress/base/ingress-grafana.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-tls
  annotations:
    dashboard.zippelf.com/scrape: "true"
    dashboard.zippelf.com/logo: "https://cdn.worldvectorlogo.com/logos/grafana.svg"
    dashboard.zippelf.com/display-name: "Grafana"
    dashboard.zippelf.com/docs: "https://grafana.com/docs/grafana/latest/"
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-grafana-ingress
  routes:
    - match: Host(`grafana.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
